Replace the Other Locations view with a Network view
This issue is requesting the new design that we worked on in Teams/Design/app-mockups#61 (closed).
The main issues with the current Other Locations view are, I think:
- The name: "Other Locations" doesn't mean anything
- The reason why each of the network items are being displayed is a mystery - we don't provide any explanation as to their origin
- The list feels like a bit of a jumble
- The connect to server bar has a bunch of awkward UI issues associated with it
The design that we seemed to settle on replaces "Other Locations" with a dedicated "Network" view. Other physical disks would appear in the sidebar. The network view is then improved to show the status of each item, have an offline state, and a steamlined connect to server bar.
The full mockups can be viewed here. @antoniof gave them a thumbs up, so I assume he thinks they're OK!